[gd_scene load_steps=5 format=3 uid="uid://e7gt3euxcl6m"]

[ext_resource type="Script" uid="uid://b4q3xyqtkmffr" path="res://Views/Controls/ZoneInfo.gd" id="1_u2rx1"]
[ext_resource type="PackedScene" uid="uid://bfmunp6jd17dq" path="res://Components/AutoCompleteLineEdit.tscn" id="2_40ynl"]
[ext_resource type="PackedScene" uid="uid://di8mt45prjmnl" path="res://Components/ZoneComponentStack.tscn" id="3_88qs0"]
[ext_resource type="Script" uid="uid://bijvftetl6l8k" path="res://Resources/ZoneComponent.cs" id="4_402yf"]

[node name="ZoneInfo" type="TabBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u2rx1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer1" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer1"]
layout_mode = 2

[node name="ZoneLine" parent="MarginContainer/HBoxContainer/VBoxContainer1/HBoxContainer" instance=ExtResource("2_40ynl")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Zone Name"

[node name="SearchButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer1/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Search"

[node name="IdLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
text = "Id:"

[node name="TypeLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
text = "Type:"

[node name="LayerLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
text = "Layer:"

[node name="DisplayNameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
text = "Display Name:"

[node name="ConnectionsLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
text = "Connections:"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Components:"

[node name="ZoneComponentStack" parent="MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("3_88qs0")]
unique_name_in_owner = true
layout_mode = 2
components = Array[ExtResource("4_402yf")]([])
